--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "confetti"
 version = "0.1.0"
-description = "Add your description here"
+description = "A counter factual exploration tool"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
     "lightgbm>=4.6.0",
     "numpy>=2.2.3",
