update github actions

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ markdown-it-py==3.0.0
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
 narwhals==1.26.0
-numpy>="2.0.0"
+numpy==2.2.3
 orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
