--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,21 +20,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    
+    - name: Install uv and set the Python version
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        ptython-version: ${{ matrix.python-version}}
+    
+    - name: Install the project
+      run: uv sync --all-extras --dev    
+    
     - name: Test with unittest
       run: |
         python -m unittest tests/test_inference.py
