--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,37 +1,32 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
   build:
-
+    name: continuous-integration
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version:
+          - "3.10"
+          - "3.11"
+          - "3.12"
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install uv and set the Python version
-      uses: astral-sh/setup-uv@v5
-      with:
-        ptython-version: ${{ matrix.python-version}}
-    
-    - name: Install the project
-      run: uv sync --all-extras --dev    
-    
-    - name: Test with unittest
-      run: |
-        python -m unittest tests/test_inference.py
-        python -m unittest tests/test_preprocessing.py
-        python -m unittest tests/test_widgets.py
-        python -m unittest tests/test_confetti.py
+      - uses: actions/checkout@v4
+
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
+      - name: Activate and run tests
+        run: 
+          source ./venv/bin/activate
+          python -m unittest tests/test_inference.py
+          python -m unittest tests/test_preprocessing.py
+          python -m unittest tests/test_widgets.py
+          python -m unittest tests/test_confetti.py
+
+          
+
