--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Run pylint on src files
         run: |
-          pylint src/
-          pylint *.py
+          pylint --fail-under=7.5 src/
+          pylint --fail-under=7.5 *.py
       
       - name: Activate and run tests
         run: |          
