--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,2 @@
 [MESSAGES CONTROL]
-disable=trailing-whitespace
-disable=import-error
-disable=too-many-positional-arguments
+disable=trailing-whitespace, import-error, too-many-positional-arguments, line-too-long
