--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,8 +3,9 @@ name: Run Python Tests
 on:
   push:
     branches:
-      - main
-    pull_request:
+      - '**'
+  pull_request:
+    branches:
       - main
 jobs:
   build:
@@ -34,10 +35,9 @@ jobs:
       - name: Install pylint
         run: uv pip install pylint
 
-      - name: Run pylint on src files
+      - name: Run pylint
         run: |
-          pylint --fail-under=7.5 src/
-          pylint --fail-under=7.5 *.py
+          pylint --fail-under=7.5 confetti/          
       
       - name: Activate and run tests
         run: |          
