--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "confetti"
 version = "0.1.0"
@@ -12,3 +16,9 @@ dependencies = [
     "shin>=0.2.1",
     "shiny>=1.2.1",
 ]
+
+[tool.setuptools]
+packages = ["confetti"]
+
+[tool.setuptools.package-data]
+confetti = ["css/*.css"]
