--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,10 @@ anyio==4.8.0
 appdirs==1.4.4
 asgiref==3.8.1
 click==8.1.8
+-e file:///home/urigott/confetti
 h11==0.14.0
 htmltools==0.6.0
 idna==3.10
-joblib==1.4.2
-lightgbm==4.6.0
 linkify-it-py==2.0.3
 markdown-it-py==3.0.0
 mdit-py-plugins==0.4.2
@@ -21,15 +20,11 @@ python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2025.1
 questionary==2.1.0
-scikit-learn==1.6.1
-scipy==1.15.1
 setuptools==75.8.0
-shin==0.2.1
 shiny==1.2.1
 six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
-threadpoolctl==3.5.0
 typing-extensions==4.12.2
 tzdata==2025.1
 uc-micro-py==1.0.3
