--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,11 +37,11 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint --fail-under=7.5 confetti/          
+          pylint --fail-under=7.5 artifact/          
       
       - name: Activate and run tests
         run: |          
           python -m unittest tests/test_inference.py
-          python -m unittest tests/test_preprocessing.py
+          python -m unittest tests/test_utilities.py
           python -m unittest tests/test_widgets.py
-          python -m unittest tests/test_confetti.py
+          python -m unittest tests/test_artifact.py
