--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Run Python Tests
+name: Verify antifact
 
 on:
   push:
@@ -36,12 +36,7 @@ jobs:
         run: uv pip install pylint
 
       - name: Run pylint
-        run: |
-          pylint --fail-under=7.5 artifact/          
+        run: pylint --fail-under=7.5 antifact/          
       
       - name: Activate and run tests
-        run: |          
-          python -m unittest tests/test_inference.py
-          python -m unittest tests/test_utilities.py
-          python -m unittest tests/test_widgets.py
-          python -m unittest tests/test_artifact.py
+        run: python -m unittest discover tests
