First working version (#3)
* update readme, many bug fixes:
1. wrong values update on checkbox/sample_id change
2. wrong value send to slider resulted in error
3. remove categorical_features/continuous_features - these are either infered from data or defined in feature_settings as {'type': 'categorical'/'continuous'}
4. change reactive functions in server

* add python version for assessment; update pyproject.toml (remove redundant packages)

* remove python 3.8

* degrade numpy to 2.0.2

* remove python 3.9

* many UI changes:
1. checkbox is True when value exists; not when value doesn't exist
2. improve visuality

* formatted with black

* add docstrings to logger.py

* additional UI fixes

* move confetti.py to main folder

* refresh requirements.txt

* correct test_confetti file

* rename to antifact

* more fixes after name change; structure as python package

* spelling error artifact/antifact

* complete renaming

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,10 +1,11 @@
-name: Run Python Tests
+name: Verify antifact
 
 on:
   push:
     branches:
-      - main
-    pull_request:
+      - '**'
+  pull_request:
+    branches:
       - main
 jobs:
   build:
@@ -34,14 +35,8 @@ jobs:
       - name: Install pylint
         run: uv pip install pylint
 
-      - name: Run pylint on src files
-        run: |
-          pylint --fail-under=7.5 src/
-          pylint --fail-under=7.5 *.py
+      - name: Run pylint
+        run: pylint --fail-under=7.5 antifact/          
       
       - name: Activate and run tests
-        run: |          
-          python -m unittest tests/test_inference.py
-          python -m unittest tests/test_preprocessing.py
-          python -m unittest tests/test_widgets.py
-          python -m unittest tests/test_confetti.py
+        run: python -m unittest discover tests
