--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Verify antifact
+name: Verify whatifact
 
 on:
   push:
@@ -36,7 +36,7 @@ jobs:
         run: uv pip install pylint
 
       - name: Run pylint
-        run: pylint --fail-under=7.5 antifact/          
+        run: pylint --fail-under=7.5 whatifact/          
       
       - name: Activate and run tests
         run: python -m unittest discover tests
