--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "whatifact"
+description = "Counter factual exploration utility"
+authors = [{name = "Uri Gottlieb", email = "urigott@gmail.com"}]
 version = "0.1.0"
-description = "A counter factual exploration tool"
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
 dependencies = [
     "lightgbm>=4.6.0",
