--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "whatifact"
-version = "0.1.0"
-description = "A counter factual exploration tool"
+description = "Counter factual exploration utility"
+authors = [{name = "Uri Gottlieb", email = "urigott@gmail.com"}]
+version = "0.1.2"
 readme = "README.md"
-requires-python = ">=3.10"
+license = { file = "LICENSE" }
+requires-python = ">=3.9"
 dependencies = [
-    "lightgbm>=4.6.0",
-    "numpy>=2.2.3",
-    "pandas>=2.2.3",
-    "scikit-learn>=1.6.1",
-    "shiny>=1.2.1",
+    "numpy>=1.26.0",
+    "pandas>=1.1.0",
+    "shiny>=1.0.0",
 ]
 
 [tool.setuptools]
