--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,9 @@
-anyio==4.8.0
-appdirs==1.4.4
-asgiref==3.8.1
-astroid==3.3.8
 black==25.1.0
-click==8.1.8
-dill==0.3.9
-h11==0.14.0
-htmltools==0.6.0
-idna==3.10
-isort==6.0.1
-joblib==1.4.2
 lightgbm==4.6.0
-linkify-it-py==2.0.3
-markdown-it-py==3.0.0
-mccabe==0.7.0
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mypy-extensions==1.0.0
-narwhals==1.29.0
-numpy==2.2.3
-orjson==3.10.15
-packaging==24.2
-pandas==2.2.3
-pathspec==0.12.1
-platformdirs==4.3.6
-prompt-toolkit==3.0.50
+numpy>=1.26.0
+pandas>=1.1.0
 pylint==3.3.4
-python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-pytz==2025.1
-questionary==2.1.0
-scikit-learn==1.6.1
-scipy==1.15.2
+scikit-learn>=1.5.0
 setuptools==75.8.2
-shiny==1.3.0
-six==1.17.0
-sniffio==1.3.1
-starlette==0.46.0
-threadpoolctl==3.5.0
-tomlkit==0.13.2
-typing-extensions==4.12.2
-tzdata==2025.1
-uc-micro-py==1.0.3
-uvicorn==0.34.0
-watchfiles==1.0.4
-wcwidth==0.2.13
-websockets==15.0.1
+shiny>=1.0.0
+tomli
