--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,41 +42,41 @@ jobs:
         run: python -m unittest discover tests
 
   publish-to-testpypi:
-      name: Publish to TestPyPI
-      runs-on: ubuntu-latest
-      needs: build # ensure build job completes successfully
-      if: github.ref == 'refs/heads/dev' # Only run on pushes to the dev branch
-      steps:
-        - uses: actions/checkout@v4
+    name: Publish to TestPyPI
+    runs-on: ubuntu-latest
+    needs: build # ensure build job completes successfully
+    if: github.ref == 'refs/heads/dev'
+    steps:
+      - uses: actions/checkout@v4
 
-        - name: Install uv and set the python version
-          uses: astral-sh/setup-uv@v5
-          with:
-            python-version: '3.12'
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: '3.12'
 
-        - name: Install the project
-          run: |
-            uv venv
-            source .venv/bin/activate
-            uv pip install -r requirements.txt
+      - name: Install the project
+        run: |
+          uv venv
+          source .venv/bin/activate
+          uv pip install -r requirements.txt
 
-        - name: Install build and twine
-          run: uv pip install build twine
+      - name: Install build and twine
+        run: uv pip install build twine
 
-        - name: Build package
-          run: uv build
+      - name: Build package
+        run: uv build
 
-        - name: Publish package to TestPyPI
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{secrets.TEST_PYPI_API_TOKEN}}
-            repository_url: https://test.pypi.org/legacy/
+      - name: Publish package to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{secrets.TEST_PYPI_API_TOKEN}}
+          repository_url: https://test.pypi.org/legacy/
   
   publish-to-pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
+    if: github.ref == 'main'    
     steps:
       - uses: actions/checkout@v4
 
