--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -101,3 +101,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+          repository_url: https://upload.pypi.org/
