--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,7 +43,7 @@ jobs:
         run: python -m unittest discover tests
 
   publish:
-    name: Publish to TestPyPI
+    name: Publish
     runs-on: ubuntu-latest
     needs: build # ensure build job completes successfully
     if: github.event_name == 'pull_request'  # Only runs on PRs
