--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
       - main
+      - dev
 jobs:
   build:
     name: continuous-integration
@@ -41,11 +42,11 @@ jobs:
       - name: Activate and run tests
         run: python -m unittest discover tests
 
-  publish-to-testpypi:
-    name: Publish to TestPyPI
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
     needs: build # ensure build job completes successfully
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'dev'
+    if: github.event_name == 'pull_request'  # Only runs on PRs
     steps:
       - uses: actions/checkout@v4
 
@@ -54,7 +55,7 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install the project
+      - name: Install dependencies
         run: |
           uv venv
           source .venv/bin/activate
@@ -66,39 +67,22 @@ jobs:
       - name: Build package
         run: uv build
 
-      - name: Publish package to TestPyPI
+      - name: Determine PyPI repository
+        id: pypi_target
+        run: |
+          if [[ "${{ github.base_ref }}" == "main" ]]; then
+            echo "repo_url=  https://upload.pypi.org/legacy/" >> $GITHUB_ENV
+            echo "pypi_token=${{ secrets.PYPI_API_TOKEN }}" >> $GITHUB_ENV
+            
+          elif [[ "${{ github.base_ref }}" == "dev" ]]; then
+            echo "repo_url=https://test.pypi.org/legacy/" >> $GITHUB_ENV
+            echo "pypi_token=${{ secrets.TEST_PYPI_API_TOKEN }}" >> $GITHUB_ENV
+          
+          fi # closes the if-elif statement
+
+      - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{secrets.TEST_PYPI_API_TOKEN}}
-          repository_url: https://test.pypi.org/legacy/
+          password: ${{ env.pypi_token }}
+          repository_url: ${{ env.repo_url }}
   
-  publish-to-pypi:
-    name: Publish to PyPI
-    runs-on: ubuntu-latest
-    needs: build    
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv and set the python version
-        uses: astral-sh/setup-uv@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install the project
-        run: |
-          uv venv
-          source .venv/bin/activate
-          uv pip install -r requirements.txt
-
-      - name: Install build and twine
-        run: uv pip install build twine
-
-      - name: Build package
-        run: uv build
-
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          repository_url: https://upload.pypi.org/
