add uv to test-pypi publishing

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,8 +54,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: '3.12'
 
