--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi-test
-      url: https://test.pypi.org/project/${{ github.event.repository.name }}
+      url: https://test.pypi.org/p/${{ github.event.repository.name }}
     permissions:
       id-token: write
     steps:
