add verbose to twine

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Build and publish
         run: |
           uv build      
-          twine upload --repository testpypi dist/*
+          python -m twine upload --verbose --repository testpypi dist/*
 
   publish-pypi:
     name: Publish-to-PyPi
